default/objects/Account/fields/AccountNumberCustom__c.field-meta.xml
<CustomField>
    <fullName>AccountNumberCustom__c</fullName>
    <description>Nº Cuenta</description>
    <label>Account Number (Custom)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>