default/objects/Account/fields/AssignedOpenJobs__c.field-meta.xml
<CustomField>
    <fullName>AssignedOpenJobs__c</fullName>
    <label>Open Jobs Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>