default/objects/Account/fields/BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>