default/objects/Account/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <description>Código Sucursal</description>
    <label>Branch Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>