default/objects/Account/fields/CalendarAvailability__c.field-meta.xml
<CustomField>
    <fullName>CalendarAvailability__c</fullName>
    <description>DISPONIBILIDAD_DELCALENDARIO</description>
    <label>Calendar Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L-D</fullName>
            </value>
            <value>
                <fullName>L-V</fullName>
            </value>
            <value>
                <fullName>S-D</fullName>
            </value>
            <value>
                <fullName>V-D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>