default/objects/Account/fields/CapacityPriority__c.field-meta.xml
<CustomField>
    <fullName>CapacityPriority__c</fullName>
    <label>Capacity Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>