default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>CATEGORIE</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <label>Información</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Prospecto</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Ocasional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>