default/objects/Account/fields/CommercialName__c.field-meta.xml
<CustomField>
    <fullName>CommercialName__c</fullName>
    <description>Nombre comercial</description>
    <label>Commercial Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>