default/objects/Account/fields/CompanyMediatorGuildPrefs__c.field-meta.xml
<CustomField>
    <fullName>CompanyMediatorGuildPrefs__c</fullName>
    <description>Preferencias por compañía/mediador/gremio</description>
    <label>Company/Mediator/Guild Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abanca</fullName>
            </value>
            <value>
                <fullName>Abanca, mediador A Pelayo</fullName>
            </value>
            <value>
                <fullName>Lagun Aro</fullName>
            </value>
            <value>
                <fullName>mediador A Lagun Aro</fullName>
            </value>
            <value>
                <fullName>mediador A Lagun Aro, Abanca</fullName>
            </value>
            <value>
                <fullName>mediador A Pelayo</fullName>
            </value>
            <value>
                <fullName>mediador A y B Lagun Aro</fullName>
            </value>
            <value>
                <fullName>mediador A y B Pelayo</fullName>
            </value>
            <value>
                <fullName>mediador B Lagun Aro</fullName>
            </value>
            <value>
                <fullName>mediador B Pelayo</fullName>
            </value>
            <value>
                <fullName>Pelayo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>