default/objects/Account/fields/CompanyMediatorGuildVeto__c.field-meta.xml
<CustomField>
    <fullName>CompanyMediatorGuildVeto__c</fullName>
    <description>Vetos por compañía/mediador/gremio</description>
    <label>Company/Mediator/Guild Vetoes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abanca</fullName>
            </value>
            <value>
                <fullName>Lagun Aro</fullName>
            </value>
            <value>
                <fullName>Pelayo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>