default/objects/Account/fields/CompanyRC__c.field-meta.xml
<CustomField>
    <fullName>CompanyRC__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIG Europe</fullName>
            </value>
            <value>
                <fullName>Allianz Seguros</fullName>
            </value>
            <value>
                <fullName>AXA Seguros Generales</fullName>
            </value>
            <value>
                <fullName>Berkley España</fullName>
            </value>
            <value>
                <fullName>Caser Seguros</fullName>
            </value>
            <value>
                <fullName>Catalana Occidente</fullName>
            </value>
            <value>
                <fullName>Chubb European Group</fullName>
            </value>
            <value>
                <fullName>Generali Seguros</fullName>
            </value>
            <value>
                <fullName>HDI Global</fullName>
            </value>
            <value>
                <fullName>Hiscox Europe</fullName>
            </value>
            <value>
                <fullName>Liberty Seguros</fullName>
            </value>
            <value>
                <fullName>Mapfre España</fullName>
            </value>
            <value>
                <fullName>Occident (Grupo Catalana)</fullName>
            </value>
            <value>
                <fullName>Plus Ultra Seguros</fullName>
            </value>
            <value>
                <fullName>QBE Seguros</fullName>
            </value>
            <value>
                <fullName>RSA España</fullName>
            </value>
            <value>
                <fullName>Santalucía Empresas</fullName>
            </value>
            <value>
                <fullName>Zurich Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>