default/objects/Account/fields/ContractedCapital__c.field-meta.xml
<CustomField>
    <fullName>ContractedCapital__c</fullName>
    <description>Capitales contratados</description>
    <label>Contracted Capital</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>