default/objects/Account/fields/ControlDigits__c.field-meta.xml
<CustomField>
    <fullName>ControlDigits__c</fullName>
    <description>Dígitos Control</description>
    <label>Control Digits</label>
    <length>10</length>
    <type>Text</type>
</CustomField>