default/objects/Account/fields/CoveredTrades__c.field-meta.xml
<CustomField>
    <fullName>CoveredTrades__c</fullName>
    <description>Ramos atendidos</description>
    <label>Covered Trades</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comercio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>