default/objects/Account/fields/DailyAssignedJobs__c.field-meta.xml
<CustomField>
    <fullName>DailyAssignedJobs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Jobs Assigned Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>