default/objects/Account/fields/DailyCapacity__c.field-meta.xml
<CustomField>
    <fullName>DailyCapacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Job Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>