default/objects/Account/fields/DeviceBrand__c.field-meta.xml
<CustomField>
    <fullName>DeviceBrand__c</fullName>
    <description>Aparato y Marca</description>
    <label>Device and Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Fagor</fullName>
            </value>
            <value>
                <fullName>Teka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>