default/objects/Account/fields/EmergencyService__c.field-meta.xml
<CustomField>
    <fullName>EmergencyService__c</fullName>
    <description>Urgencias (Atiende urgencias)</description>
    <label>Emergency Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>