default/objects/Account/fields/EntityCode__c.field-meta.xml
<CustomField>
    <fullName>EntityCode__c</fullName>
    <description>Código Entidad</description>
    <label>Entity Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>