default/objects/Account/fields/Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Exclusion__c</fullName>
    <description>EXCLUSION</description>
    <label>Exclusion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>