default/objects/Account/fields/ExclusionEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExclusionEndDate__c</fullName>
    <description>FIN_EXCL</description>
    <label>Exclusion End Date</label>
    <type>Date</type>
</CustomField>