default/objects/Account/fields/ExclusionStartDate__c.field-meta.xml
<CustomField>
    <fullName>ExclusionStartDate__c</fullName>
    <description>DEB_EXCL</description>
    <label>Exclusion Start Date</label>
    <type>Date</type>
</CustomField>