default/objects/Account/fields/Guild__c.field-meta.xml
<CustomField>
    <fullName>Guild__c</fullName>
    <label>Guild</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Guild</valueSetName>
    </valueSet>
</CustomField>