default/objects/Account/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>