default/objects/Account/fields/MaxOpenJobs__c.field-meta.xml
<CustomField>
    <fullName>MaxOpenJobs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max Open Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>