default/objects/Account/fields/OnCallCalendar__c.field-meta.xml
<CustomField>
    <fullName>OnCallCalendar__c</fullName>
    <description>Calendario de guardias (urgencias)</description>
    <label>On-call Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enero-Diciembre</fullName>
            </value>
            <value>
                <fullName>Enero-Junio</fullName>
            </value>
            <value>
                <fullName>Febrero-Diciembre</fullName>
            </value>
            <value>
                <fullName>Marzo-Septiembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>