default/objects/Account/fields/OpenJobsCapacityPct__c.field-meta.xml
<CustomField>
    <fullName>OpenJobsCapacityPct__c</fullName>
    <formula>IF(
    MaxOpenJobs__c = 0,
    0,
    AssignedOpenJobs__c / MaxOpenJobs__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Jobs Capacity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>