default/objects/Account/fields/OverloadCalendar__c.field-meta.xml
<CustomField>
    <fullName>OverloadCalendar__c</fullName>
    <description>Calendario de sobrecarga</description>
    <label>Overload Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>J-V</fullName>
            </value>
            <value>
                <fullName>L-V</fullName>
            </value>
            <value>
                <fullName>L-X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>