default/objects/Account/fields/OverloadFactor__c.field-meta.xml
<CustomField>
    <fullName>OverloadFactor__c</fullName>
    <description>Factor de sobrecarga</description>
    <label>Overload Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>