default/objects/Account/fields/OverpendingFactor__c.field-meta.xml
<CustomField>
    <fullName>OverpendingFactor__c</fullName>
    <description>Factor de sobrependiente</description>
    <label>Overpending Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>