default/objects/Account/fields/Pere__c.field-meta.xml
<CustomField>
    <fullName>Pere__c</fullName>
    <description>PERE</description>
    <label>Pere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>