default/objects/Account/fields/PolicyNumberRC__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumberRC__c</fullName>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>