default/objects/Account/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <label>Population</label>
    <length>255</length>
    <type>Text</type>
</CustomField>