default/objects/Account/fields/PostalCodeCustom__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeCustom__c</fullName>
    <description>Código postal</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>