default/objects/Account/fields/RateTable__c.field-meta.xml
<CustomField>
    <fullName>RateTable__c</fullName>
    <description>Baremo</description>
    <label>Rate Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>