default/objects/Account/fields/ReasonLeaving__c.field-meta.xml
<CustomField>
    <fullName>ReasonLeaving__c</fullName>
    <label>Reason Leaving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>