default/objects/Account/fields/ReducedVAT__c.field-meta.xml
<CustomField>
    <fullName>ReducedVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduced VAT</label>
    <type>Checkbox</type>
</CustomField>