default/objects/Account/fields/ReducedVATValue__c.field-meta.xml
<CustomField>
    <fullName>ReducedVATValue__c</fullName>
    <formula>IF(
    ReducedVAT__c,
    IF(
        OR(
            BEGINS(BillingPostalCode, &quot;35&quot;),
            BEGINS(BillingPostalCode, &quot;38&quot;)
        ),
        0,
        IF(
            OR(
                BEGINS(BillingPostalCode, &quot;51&quot;),
                BEGINS(BillingPostalCode, &quot;52&quot;)
            ),
            0,
            10
        )
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reduced VAT Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>