default/objects/Account/fields/RepairAutonomy__c.field-meta.xml
<CustomField>
    <fullName>RepairAutonomy__c</fullName>
    <description>Autonomia de reparación</description>
    <label>Repair Autonomy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>