default/objects/Account/fields/SAPEntityCode__c.field-meta.xml
<CustomField>
    <fullName>SAPEntityCode__c</fullName>
    <externalId>true</externalId>
    <label>SAPEntityCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>