default/objects/Account/fields/Siret__c.field-meta.xml
<CustomField>
    <fullName>Siret__c</fullName>
    <description>SIRET</description>
    <label>SIRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>