default/objects/Account/fields/SubscribedCode__c.field-meta.xml
<CustomField>
    <fullName>SubscribedCode__c</fullName>
    <label>Helper Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>