default/objects/Account/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <label>Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camión cuba</fullName>
            </value>
            <value>
                <fullName>Gas traza</fullName>
            </value>
            <value>
                <fullName>Gas traza, geófono</fullName>
            </value>
            <value>
                <fullName>termográfico</fullName>
            </value>
            <value>
                <fullName>Trabajos en altura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>