default/objects/Account/fields/Urlfact__c.field-meta.xml
<CustomField>
    <fullName>Urlfact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urlfact</label>
    <type>Checkbox</type>
</CustomField>