default/objects/Account/fields/UrlinkEmail__c.field-meta.xml
<CustomField>
    <fullName>UrlinkEmail__c</fullName>
    <label>Urlink Email</label>
    <type>Email</type>
</CustomField>