default/objects/Account/fields/UrlinkPhone__c.field-meta.xml
<CustomField>
    <fullName>UrlinkPhone__c</fullName>
    <label>Urlink Phone</label>
    <type>Phone</type>
</CustomField>