default/objects/Account/fields/UrlinkSupplier__c.field-meta.xml
<CustomField>
    <fullName>UrlinkSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urlink Supplier</label>
    <type>Checkbox</type>
</CustomField>