default/objects/Account/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF(
    OR(
        BEGINS( BillingPostalCode , &quot;35&quot;),
        BEGINS(BillingPostalCode , &quot;38&quot;)
    ),
    7,
    IF(
        OR(
            BEGINS(BillingPostalCode , &quot;51&quot;),
            BEGINS(BillingPostalCode , &quot;52&quot;)
        ),
        4,
        21
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>