default/objects/Account/fields/VatIntra__c.field-meta.xml
<CustomField>
    <fullName>VatIntra__c</fullName>
    <description>TVA_INTRA</description>
    <label>VAT Intra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>