default/objects/Account/fields/WorkPostalCodes__c.field-meta.xml
<CustomField>
    <fullName>WorkPostalCodes__c</fullName>
    <description>Codigos postales en los que trabaja</description>
    <label>Work Postal Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>