default/objects/Account/recordTypes/InsuranceCompany.recordType-meta.xml
<RecordType>
    <fullName>InsuranceCompany</fullName>
    <active>true</active>
    <label>Insurance Company</label>
</RecordType>